<resources>
    <string name="app_name">sign up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign Up Here</string>
    <string name="username">Enter username</string>
    <string name="password">Enter Password</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="login">Login</string>
    <string name="login_here">Login Here</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="your_email">Your Email</string>
    <string name="fnameerr">Enter your Name</string>
    <string name="lnameerr">Enter Human Name</string>
    <string name="emailerr">Enter Correct Email</string>
    <string name="passerr">Enter Password</string>
    <string name="cnfpasserr">Password do not match</string>

</resources>
